--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ li {
     background-attachment: fixed;
     background-position: 50% 50%;
     background-color: #818181;
-    background-image: url(../img/background.jpg);
+    background-image: url(https://api.wanqiu.tk/picture/?sort=acg&screen=auto);
 }
 
 #background:after {
@@ -64,7 +64,7 @@ li {
     width: 1200px;
     margin-top: -275px;
     margin-left: -600px;
-    background-color: rgba(0, 0, 0, .2);
+    background-color: rgba(0, 0, 0, .4);
     border-radius: 8px;
 }
 
@@ -138,7 +138,7 @@ li {
     box-shadow: 10px 10px 10px -4px rgba(0, 0, 0, .3) inset;
 }
 
-#last input{
+#last button{
     border-bottom-left-radius: 8px;
 }
 
